[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Enemies/EnemyTemplate.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SphereMesh" id=5]

[sub_resource type="SphereMesh" id=3]
radius = 0.75
height = 1.5

[sub_resource type="CapsuleShape" id=4]

[sub_resource type="SphereShape" id=8]

[node name="EnemyTemplate" type="RigidBody" groups=["Enemy"]]
collision_layer = 4
collision_mask = 15
axis_lock_linear_x = true
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource( 1 )

[node name="Body" type="Spatial" parent="."]

[node name="BodyMesh" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 2 )

[node name="Backpack" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 0.565304, 0, 0, 0, 0.346222, 2.85775e-08, 0, 2.85775e-08, 1, 0, 0.858579, -0.127904 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="HeadMesh" type="MeshInstance" parent="Head"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../..")
material/0 = SubResource( 2 )

[node name="RightEye" type="MeshInstance" parent="Head/HeadMesh" groups=["Enemy"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.436204, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../../../Body/BodyMesh")
material/0 = null

[node name="Vision" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, 0, -200 )
collision_mask = 15

[node name="BulletOrigin" type="Position3D" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.2 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BulletCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="EnemySound" type="AudioStreamPlayer3D" parent="."]

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, 0 )
shape = SubResource( 4 )

[node name="HeadCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2, 0 )
shape = SubResource( 8 )

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="BulletCooldown" to="." method="_on_BulletCooldown_timeout"]
